# crustwind

./: Cargo.toml  DEVELOPMENT.md  README.md  cliff.toml  crustwind.code-workspace
crustwind/crustwind/: Cargo.toml  README.md
crustwind/crustwind-cli/: Cargo.toml  README.md
crustwind/crustwind-cli/src/: lib.rs
crustwind/crustwind-inline/: Cargo.toml  README.md
crustwind/crustwind-inline/src/: lib.rs
crustwind/crustwind-macro/: Cargo.toml  README.md
crustwind/crustwind-macro/examples/: units.rs
crustwind/crustwind-macro/src/: lib.rs
crustwind/crustwind-macro/src/css/: mod.rs  units.rs
crustwind/crustwind-templates-askama/: Cargo.toml
crustwind/crustwind-templates-askama/src/: lib.rs
crustwind/crustwind-templates-rsx/: Cargo.toml  README.md
crustwind/crustwind-templates-tera/: Cargo.toml  README.md
crustwind/crustwind-templates-tera/src/: lib.rs
crustwind/crustwind/src/: lib.rs
crustwind/crustwind/src/css/: length.rs  mod.rs  rule.rs
crustwind/crustwind/src/css/background/: attachment.rs  blend_mode.rs  clip.rs  color.rs  image.rs  mod.rs  origin.rs  position.rs  repeat.rs  size.rs
crustwind/crustwind/src/css/color/: display.rs  hex.rs  mod.rs
crustwind/crustwind/src/css/color/testdata/: test_parse_invalid_hex_colors.golden
crustwind/crustwind/src/css/layout/: aspect_ratio.rs  clear.rs  columns.rs  display.rs  float.rs  gap.rs  mod.rs  order.rs  overflow.rs  overscroll.rs  visibility.rs  z_index.rs
crustwind/crustwind/src/css/layout/align/: content.rs  items.rs  mod.rs  self_.rs
crustwind/crustwind/src/css/layout/box_/: decoration.rs  mod.rs  sizing.rs
crustwind/crustwind/src/css/layout/break_/: after.rs  before.rs  inside.rs  mod.rs
crustwind/crustwind/src/css/layout/flex/: basis.rs  direction.rs  grow.rs  mod.rs  shrink.rs  wrap.rs
crustwind/crustwind/src/css/layout/grid/: auto_columns.rs  auto_flow.rs  auto_rows.rs  column.rs  mod.rs  row.rs  template_columns.rs  template_rows.rs
crustwind/crustwind/src/css/layout/justify/: content.rs  items.rs  self_.rs
crustwind/crustwind/src/css/layout/object/: fit.rs  mod.rs  position.rs
crustwind/crustwind/src/css/layout/place/: content.rs  items.rs  mod.rs  self_.rs
crustwind/crustwind/src/css/layout/position/: bottom.rs  left.rs  mod.rs  right.rs  top.rs
crustwind/crustwind/src/css/rule/: mod.rs
crustwind/crustwind/src/css/sizing/: height.rs  mod.rs  width.rs
crustwind/crustwind/src/css/spacing/: margin.rs  mod.rs  padding.rs
crustwind/crustwind/src/css/units/: calc.rs  mod.rs  number.rs  variable.rs
crustwind/crustwind/src/css/units/color/: display.rs  hex.rs  mod.rs
crustwind/crustwind/src/css/units/color/testdata/: test_color_display.golden  test_parse_functional_colors.golden  test_parse_hex_colors.golden  test_parse_invalid_functional_colors.golden
crustwind/crustwind/src/html/: mod.rs  node.rs  tag.rs
