[package]
name = "crustwind_macro"
description = "Crustwind macros"
version = "0.0.1"
authors = ["Yuriy Yarosh <yuriy@yarosh.dev>"]
documentation = "https://bitsnap.io/documentation/"
edition = "2024"
publish = false

[lib]
proc-macro = true

[dependencies]
anyhow.workspace = true

proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

prettyplease.workspace = true

[dev-dependencies]
derive_more.workspace = true

[lints]
workspace = true
